Fixed background of hamburger so it is still black on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -1357,8 +1357,8 @@ input[type="file"] {
 @media only screen and (max-width: 768px) {
   .menu-toggle {
     display: flex;
-    background: none !important;
-    box-shadow: none !important;
+    background-color: #000 !important;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25) !important;
   }
 }
 /** 
